# wavefunctioncollapse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yml
src/wavefunctioncollapse/: example_boxes.py  example_paths.py  wfc.py
src/wavefunctioncollapse/demo/: example_paths.py
test/: test_wfc.py
